--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ facebook_appid:
 facebook_comments_number: 10
 
 # Social icons
-github_username: fmedli
+github_username: fmedlin
 bitbucket_username:
 stackoverflow_id: fmedlin
 twitter_username: fmedlin
