--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ facebook_comments_number: 10
 # Social icons
 github_username: fmedlin
 bitbucket_username:
-stackoverflow_id: fred-medlin
+stackoverflow_id: 42671
 twitter_username: fmedlin
 skype_username:
 steam_nickname:
